Fix z-index issue

--- a/src/styl/index.projects.styl
+++ b/src/styl/index.projects.styl
@@ -21,7 +21,7 @@ info-size = 45vmin
 		width image-size
 		height image-size
 		background white
-		z-index -1
+		z-index 1
 		img
 			width 100%
 			height 100%
@@ -40,7 +40,7 @@ info-size = 45vmin
 		height auto
 		padding 2em
 		background color-bg
-		z-index 1
+		z-index 2
 
 	.projects-item
 		&:nth-child(odd)
